Generate version numbers based on dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -12,11 +12,11 @@ copyright_holder = Aditya Ivaturi
 [Manifest]
 [MetaJSON]
 [MetaYAML]
-;[PkgVersion]
+[PkgVersion]
 [PruneCruft]
 [PodCoverageTests]
 [PodSyntaxTests]
-;[PodVersion]
+[PodVersion]
 
 [TestRelease]
 
