Support automated releasing and tagging

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,8 @@ copyright_holder = Aditya Ivaturi
 [PodVersion]
 
 [TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
 
 [Prereqs / BuildRequires]
 LWP::Protocol::PSGI = 0
