Set the minimum Perl version to 5.10 in Dist::Zilla config and main module.

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,8 @@ LWP::Protocol::PSGI = 0
 Test::More = 0
 
 [Prereqs / RuntimeRequires]
+perl = 5.010
+
 Carp = 0
 HTTP::Headers = 0
 HTTP::Request = 0
