I tagged before I did 'dzil release', and so it complained that there was a tag already, so I took out Git::Tag from dist.ini temporarily

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,10 @@ license = Apache_2_0
 
 copyright_holder = Aditya Ivaturi
 
-[@Git]
+[Git::Check]
+[Git::Commit]
+[Git::Push]
+
 [GatherDir]
 [MakeMaker]
 [ManifestSkip]
