Compare test recording content deeply with Storable
The stored request content and the request testing content are
sometimes out of order when converted back and forth to strings, so we
can also check for deeply_equal with Storable::freeze.

--- a/dist.ini
+++ b/dist.ini
@@ -42,6 +42,7 @@ MIME::Base64 = 0
 
 [Prereqs / TestRequires]
 Carp = 1.25
+Storable = 0
 
 [MetaResources]
 bugtracker.web = https://github.com/aivaturi/Selenium-Remote-Driver/issues
