Resolve #78: Test::WebDriver has been merged into this distro as Test::Selenium::Remote::Driver

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,8 @@
 name = Selenium-Remote-Driver
 version = 0.18
 author = Aditya Ivaturi <ivaturi@gmail.com>
+author = Luke Closs <cpan@5thplane.com>
+author = Mark Stosberg <mark@stosberg.com>
 license = Apache_2_0
 
 copyright_holder = Aditya Ivaturi
@@ -28,6 +30,7 @@ copyright_holder = Aditya Ivaturi
 [Prereqs / BuildRequires]
 LWP::Protocol::PSGI = 0
 Test::More = 0
+Test::Builder = 0
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
@@ -39,6 +42,7 @@ JSON = 0
 LWP::UserAgent = 0
 Net::Ping = 0
 MIME::Base64 = 0
+IO::Socket = 0
 
 [Prereqs / TestRequires]
 Carp = 1.25
