Fix #64: Add `firefox_profile` option to new() for custom profiles
This commit adds a new option to the Selenium::Remote::Driver->new()
sub: `firefox_profile`. It accepts a
Selenium::Remote::Driver::Firefox::Profile object that currently has
the capacity for specifying user preferences [1] and embedding packed
extensions. It does not (yet) support cloning existing Firefox
profiles for use in tests, or adding unpacked extensions, but both of
those features would be straightforward to add.

The docs and tests have been updated accordingly. Pending #83, I can
generate mocks for the new tests.

[1]: http://kb.mozillazine.org/About:config_entries

--- a/dist.ini
+++ b/dist.ini
@@ -35,6 +35,8 @@ Test::Builder = 0
 [Prereqs / RuntimeRequires]
 perl = 5.010
 
+Archive::Zip = 0
+Archive::Extract = 0
 Carp = 0
 HTTP::Headers = 0
 HTTP::Request = 0
