--- a/dist.ini
+++ b/dist.ini
@@ -43,6 +43,8 @@ LWP::UserAgent = 0
 Net::Ping = 0
 MIME::Base64 = 0
 IO::Socket = 0
+Moo = 0
+Try::Tiny = 0
 
 [Prereqs / TestRequires]
 Carp = 1.25
