Use dzil AutoPrereqs plugin
Conflicts:
	dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ copyright_holder = Aditya Ivaturi
 [Git::Commit]
 [Git::Push]
 
+[AutoPrereqs]
 [GatherDir]
 [MakeMaker]
 [ManifestSkip]
@@ -28,24 +29,12 @@ copyright_holder = Aditya Ivaturi
 [UploadToCPAN]
 
 [Prereqs / BuildRequires]
-LWP::Protocol::PSGI = 0.04
-Test::More = 0
-Test::Builder = 0
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
 
-Carp = 0
-HTTP::Headers = 0
-HTTP::Request = 0
-JSON = 0
-LWP::UserAgent = 0
-Net::Ping = 0
-MIME::Base64 = 0
-IO::Socket = 0
-
 [Prereqs / TestRequires]
-Carp = 1.25
+LWP::Protocol::PSGI = 0.04
 
 [MetaResources]
 bugtracker.web = https://github.com/gempesaw/Selenium-Remote-Driver/issues
