Handle encoding issues brought about by dist zilla v5

--- a/dist.ini
+++ b/dist.ini
@@ -41,3 +41,7 @@ bugtracker.web = https://github.com/gempesaw/Selenium-Remote-Driver/issues
 repository.type = git
 repository.url = git://github.com/gempesaw/Selenium-Remote-Driver.git
 repository.web = https://github.com/gempesaw/Selenium-Remote-Driver
+
+[Encoding]
+filename = t/www/icon.gif
+encoding = bytes
