Update pod & changes with new maintainer info

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,11 @@
 name = Selenium-Remote-Driver
 version = 0.18
-author = Aditya Ivaturi <ivaturi@gmail.com>
-author = Luke Closs <cpan@5thplane.com>
-author = Mark Stosberg <mark@stosberg.com>
+authors = [
+    'Aditya Ivaturi <ivaturi@gmail.com>',
+    'Luke Closs <cpan@5thplane.com>',
+    'Mark Stosberg <mark@stosberg.com>',
+    'Daniel Gempesaw <gempesaw@gmail.com>',
+]
 license = Apache_2_0
 
 copyright_holder = Aditya Ivaturi
