Fix authors section of dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,10 @@
 name = Selenium-Remote-Driver
 version = 0.18
-authors = [
-    'Aditya Ivaturi <ivaturi@gmail.com>',
-    'Luke Closs <cpan@5thplane.com>',
-    'Mark Stosberg <mark@stosberg.com>',
-    'Daniel Gempesaw <gempesaw@gmail.com>',
-]
+author = 'Luke Closs <cpan@5thplane.com>'
+author = 'Daniel Gempesaw <gempesaw@gmail.com>'
+author = 'Aditya Ivaturi <ivaturi@gmail.com>'
+author = 'Mark Stosberg <mark@stosberg.com>'
+
 license = Apache_2_0
 
 copyright_holder = Aditya Ivaturi
