Add [TravisYML] to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,10 @@ author = 'Mark Stosberg <mark@stosberg.com>'
 license = Apache_2_0
 
 copyright_holder = Aditya Ivaturi
+[TravisYML]
+build_branch = /^build/
+notify_email = 1
+perl_version = 5.12 5.16
 
 [Git::Check]
 [Git::Commit]
@@ -15,14 +19,20 @@ copyright_holder = Aditya Ivaturi
 [Git::CommitBuild]
 
 [AutoPrereqs]
+
 [GatherDir]
+include_dotfiles = 1
+
 [MakeMaker]
 [ManifestSkip]
 [Manifest]
 [MetaJSON]
 [MetaYAML]
 [PkgVersion]
+
 [PruneCruft]
+except = \.travis.yml
+
 [PodCoverageTests]
 [PodSyntaxTests]
 [PodVersion]
@@ -30,8 +40,6 @@ copyright_holder = Aditya Ivaturi
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
-
-[Prereqs / BuildRequires]
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
