--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,8 @@ author = 'Aditya Ivaturi <ivaturi@gmail.com>'
 author = 'Mark Stosberg <mark@stosberg.com>'
 
 license = Apache_2_0
+copyright_holder = Daniel Gempesaw
 
-copyright_holder = Aditya Ivaturi
 [TravisYML]
 build_branch = /^build/
 notify_email = 1
