Use [ContributorsFromGit] and [PodWeaver]

--- a/dist.ini
+++ b/dist.ini
@@ -32,6 +32,17 @@ include_dotfiles = 1
 [MetaYAML]
 [PkgVersion]
 
+[ContributorsFromGit]
+[PodWeaver]
+
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.md
+location = build
+
+[CopyFilesFromBuild]
+copy = README.md
+
 [PruneCruft]
 except = \.travis.yml
 
