--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name = Selenium-Remote-Driver
 version = 0.18
-author = 'Aditya Ivaturi <ivaturi@gmail.com>'
-author = 'Daniel Gempesaw <gempesaw@gmail.com>'
-author = 'Luke Closs <cpan@5thplane.com>'
-author = 'Mark Stosberg <mark@stosberg.com>'
+author = Luke Closs <cpan@5thplane.com>
+author = Daniel Gempesaw <gempesaw@gmail.com>
+author = Aditya Ivaturi <ivaturi@gmail.com>
+author = Mark Stosberg <mark@stosberg.com>
 
 license = Apache_2_0
 copyright_holder = Daniel Gempesaw
