--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,9 @@
 name = Selenium-Remote-Driver
 version = 0.18
-author = Luke Closs <cpan@5thplane.com>
-author = Daniel Gempesaw <gempesaw@gmail.com>
 author = Aditya Ivaturi <ivaturi@gmail.com>
+author = Daniel Gempesaw <gempesaw@gmail.com>
+author = Luke Closs <cpan@5thplane.com>
 author = Mark Stosberg <mark@stosberg.com>
-
-license = Apache_2_0
-copyright_holder = Daniel Gempesaw
 
 [TravisYML]
 build_branch = cpan
@@ -31,6 +28,12 @@ include_dotfiles = 1
 [MetaJSON]
 [MetaYAML]
 [PkgVersion]
+
+; license and copyright are handled in weaver.ini
+; [License]
+license = Apache_2_0
+copyright_holder = Daniel Gempesaw
+copyright_year = 2014
 
 [ContributorsFromGit]
 [PodWeaver]
