--- a/weaver.ini
+++ b/weaver.ini
@@ -1,6 +1,48 @@
-[@Default]
+[@CorePrep]
 
+[-SingleEncoding]
+
+[Name]
+[Version]
+
+[Region  / prelude]
+
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Collect / METHODS]
+command = method
+
+[Collect / FUNCTIONS]
+command = func
+
+[Leftovers]
+
+[Region  / postlude]
+
+[Authors]
 [Contributors]
+[GenerateSection / COPYRIGHT AND LICENSE]
+text = Copyright (c) 2010-2011 Aditya Ivaturi, Gordon Child
+text =
+text = Copyright (c) 2014 Daniel Gempesaw
+text =
+text = Licensed under the Apache License, Version 2.0 (the "License");
+text = you may not use this file except in compliance with the License.
+text = You may obtain a copy of the License at
+text =
+text =      http://www.apache.org/licenses/LICENSE-2.0
+text =
+text = Unless required by applicable law or agreed to in writing, software
+text = distributed under the License is distributed on an "AS IS" BASIS,
+text = WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+text = See the License for the specific language governing permissions and
+text = limitations under the License.
+
 
 [-Transformer]
 transformer = List
