Manually specify Podweaver deps

--- a/dist.ini
+++ b/dist.ini
@@ -36,6 +36,11 @@ copyright_holder = Daniel Gempesaw
 copyright_year = 2014
 
 [ContributorsFromGit]
+; `dzil authordeps` doesn't pick up the Pod Weaver deps:
+; authordep Pod::Weaver::Section::Contributors = 0
+; authordep Pod::Weaver::Plugin::Encoding = 0
+; authordep Pod::Weaver::Section::GenerateSection = 0
+; authordep Pod::Elemental::Transformer::List = 0
 [PodWeaver]
 
 [ReadmeAnyFromPod]
