Only weave normal SRD files
TestSRD aren't fit for weaving, as their attribution sections are
non-standard.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Selenium-Remote-Driver
-version = 0.18
+version = 0.19
 author = Aditya Ivaturi <ivaturi@gmail.com>
 author = Daniel Gempesaw <gempesaw@gmail.com>
 author = Luke Closs <cpan@5thplane.com>
@@ -34,14 +34,21 @@ include_dotfiles = 1
 license = Apache_2_0
 copyright_holder = Daniel Gempesaw
 copyright_year = 2014
-
 [ContributorsFromGit]
+
+; skip the Test::SRD modules, their attribution is non-standard
+[FileFinder::ByName / :NotTestSRD]
+dir = lib
+match = \.pm$
+skip = Test
+
 ; `dzil authordeps` doesn't pick up the Pod Weaver deps:
 ; authordep Pod::Weaver::Section::Contributors = 0
 ; authordep Pod::Weaver::Plugin::Encoding = 0
 ; authordep Pod::Weaver::Section::GenerateSection = 0
 ; authordep Pod::Elemental::Transformer::List = 0
 [PodWeaver]
+finder = :NotTestSRD
 
 [ReadmeAnyFromPod]
 type = markdown
