Consolidate redundant See Also/Bugs pod sections

--- a/weaver.ini
+++ b/weaver.ini
@@ -22,6 +22,14 @@ command = func
 
 [Leftovers]
 
+[GenerateSection / SEE ALSO]
+text = For more information about Selenium , visit the website at
+text = L<http://code.google.com/p/selenium/>.
+
+[GenerateSection / BUGS]
+text = The Selenium issue tracking system is available online at
+text = L<http://github.com/gempesaw/Selenium-Remote-Driver/issues>.
+
 [Region  / postlude]
 
 [Authors]
