--- a/dist.ini
+++ b/dist.ini
@@ -9,13 +9,15 @@ license = Apache_2_0
 copyright_holder = Daniel Gempesaw
 
 [TravisYML]
-build_branch = /^build/
-notify_email = 1
 
 [Git::Check]
 [Git::Commit]
+[Git::Tag]
 [Git::Push]
 [Git::CommitBuild]
+branch =
+release_branch = cpan
+release_message = v%v%t - Build results of %h (on %b)
 
 [AutoPrereqs]
 
