Set up CommitBuild to write to cpan branch on release

--- a/dist.ini
+++ b/dist.ini
@@ -15,9 +15,9 @@ copyright_holder = Daniel Gempesaw
 [Git::Tag]
 [Git::Push]
 [Git::CommitBuild]
-branch =
 release_branch = cpan
-release_message = v%v%t - Build results of %h (on %b)
+release_message = v%v - Build results of %h (on %b)
+branch =
 
 [AutoPrereqs]
 
@@ -40,6 +40,7 @@ except = \.travis.yml
 
 [TestRelease]
 [ConfirmRelease]
+; [FakeRelease]
 [UploadToCPAN]
 
 [Prereqs / RuntimeRequires]
