--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ license = Apache_2_0
 copyright_holder = Daniel Gempesaw
 
 [TravisYML]
+build_branch = cpan
 
 [Git::Check]
 [Git::Commit]
@@ -40,8 +41,8 @@ except = \.travis.yml
 
 [TestRelease]
 [ConfirmRelease]
-; [FakeRelease]
-[UploadToCPAN]
+[FakeRelease]
+; [UploadToCPAN]
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
