--- a/dist.ini
+++ b/dist.ini
@@ -40,21 +40,13 @@ dir = lib
 match = \.pm$
 skip = Test
 
-; `dzil authordeps` doesn't pick up the Pod Weaver deps:
+; `dzil authordeps` doesn't know about the Pod Weaver deps:
 ; authordep Pod::Weaver::Section::Contributors = 0
 ; authordep Pod::Weaver::Plugin::Encoding = 0
 ; authordep Pod::Weaver::Section::GenerateSection = 0
 ; authordep Pod::Elemental::Transformer::List = 0
 [PodWeaver]
 finder = :NotTestSRD
-
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = build
-
-[CopyFilesFromBuild]
-copy = README.md
 
 [PruneCruft]
 except = \.travis.yml
