Update xpis and mark them as encoded files

--- a/dist.ini
+++ b/dist.ini
@@ -48,14 +48,6 @@ skip = Test
 [PodWeaver]
 finder = :NotTestSRD
 
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = build
-
-[CopyFilesFromBuild]
-copy = README.md
-
 [PruneCruft]
 except = \.travis.yml
 
@@ -81,4 +73,6 @@ repository.web = https://github.com/gempesaw/Selenium-Remote-Driver
 
 [Encoding]
 filename = t/www/icon.gif
+filename = t/www/invalid-extension.xpi
+filename = t/www/redisplay.xpi
 encoding = bytes
