Add cpanfile to dist
[ci skip]

--- a/dist.ini
+++ b/dist.ini
@@ -28,6 +28,7 @@ include_dotfiles = 1
 [MakeMaker]
 [ManifestSkip]
 [Manifest]
+[CPANFile]
 [MetaJSON]
 [MetaYAML]
 [PkgVersion]
@@ -50,6 +51,9 @@ finder = :NotTestSRD
 
 [PruneCruft]
 except = \.travis.yml
+
+[CopyFilesFromBuild]
+copy = cpanfile
 
 [PodCoverageTests]
 [PodSyntaxTests]
