Stop GatherDir'ing cpanfile to assuage Dist Zilla

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ branch =
 
 [GatherDir]
 include_dotfiles = 1
+exclude_filename = cpanfile
 
 [MakeMaker]
 [ManifestSkip]
@@ -41,9 +42,10 @@ dir = lib
 match = \.pm$
 skip = Test
 
-; `dzil authordeps` doesn't know about the Pod Weaver deps:
+; `dzil authordeps` doesn't know about the Pod Weaver dependenciess:
 ; authordep Pod::Weaver::Section::Contributors = 0
 ; authordep Pod::Weaver::Plugin::Encoding = 0
+; authordep Pod::Weaver::Section::SeeAlso = 0
 ; authordep Pod::Weaver::Section::GenerateSection = 0
 ; authordep Pod::Elemental::Transformer::List = 0
 [PodWeaver]
@@ -67,6 +69,7 @@ copy = cpanfile
 perl = 5.010
 
 [Prereqs / TestRequires]
+; unfortunately this doesn't coerce 0.04, it just sets the minimum.
 LWP::Protocol::PSGI = 0.04
 
 [MetaResources]
