--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,17 @@
 name = Selenium-Remote-Driver
-version = 0.18
-author = 'Aditya Ivaturi <ivaturi@gmail.com>'
-author = 'Daniel Gempesaw <gempesaw@gmail.com>'
-author = 'Luke Closs <cpan@5thplane.com>'
-author = 'Mark Stosberg <mark@stosberg.com>'
-
+version = 0.1801
+author = Aditya Ivaturi <ivaturi@gmail.com>
+author = Daniel Gempesaw <gempesaw@gmail.com>
+author = Luke Closs <cpan@5thplane.com>
+author = Mark Stosberg <mark@stosberg.com>
 license = Apache_2_0
 copyright_holder = Daniel Gempesaw
+copyright_year = 2014
 
 [TravisYML]
 build_branch = cpan
 
-; [Git::Check]
+[Git::Check]
 ; [Git::Commit]
 ; [Git::Tag]
 ; [Git::Push]
@@ -24,20 +24,41 @@ branch =
 
 [GatherDir]
 include_dotfiles = 1
+exclude_filename = cpanfile
 
 [MakeMaker]
 [ManifestSkip]
 [Manifest]
+[CPANFile]
 [MetaJSON]
 [MetaYAML]
 [PkgVersion]
 
+[ContributorsFromGit]
+
+; skip the Test::SRD modules, their attribution is non-standard
+[FileFinder::ByName / :NotTestSRD]
+dir = lib
+match = \.pm$
+skip = Test
+
+; `dzil authordeps` doesn't know about the Pod Weaver dependenciess:
+; authordep Pod::Weaver::Section::Contributors = 0
+; authordep Pod::Weaver::Plugin::Encoding = 0
+; authordep Pod::Weaver::Section::SeeAlso = 0
+; authordep Pod::Weaver::Section::GenerateSection = 0
+; authordep Pod::Elemental::Transformer::List = 0
+[PodWeaver]
+finder = :NotTestSRD
+
 [PruneCruft]
 except = \.travis.yml
 
+[CopyFilesFromBuild]
+copy = cpanfile
+
 [PodCoverageTests]
 [PodSyntaxTests]
-[PodVersion]
 
 [TestRelease]
 [ConfirmRelease]
@@ -48,6 +69,7 @@ except = \.travis.yml
 perl = 5.010
 
 [Prereqs / TestRequires]
+; unfortunately this doesn't coerce 0.04, it just sets the minimum.
 LWP::Protocol::PSGI = 0.04
 
 [MetaResources]
