--- a/dist.ini
+++ b/dist.ini
@@ -62,8 +62,7 @@ copy = cpanfile
 
 [TestRelease]
 [ConfirmRelease]
-[FakeRelease]
-; [UploadToCPAN]
+[UploadToCPAN]
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
