--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Selenium-Remote-Driver
-version = 0.1801
+version = 0.19
 author = Aditya Ivaturi <ivaturi@gmail.com>
 author = Daniel Gempesaw <gempesaw@gmail.com>
 author = Luke Closs <cpan@5thplane.com>
@@ -18,6 +18,7 @@ build_branch = cpan
 [Git::CommitBuild]
 release_branch = cpan
 release_message = v%v - Build results of %h (on %b)
+branch =
 
 [AutoPrereqs]
 
