--- a/dist.ini
+++ b/dist.ini
@@ -13,8 +13,8 @@ copyright_year = 2014
 
 [Git::Check]
 [Git::Commit]
-[Git::Tag]
-[Git::Push]
+;[Git::Tag]
+;[Git::Push]
 [Git::CommitBuild]
 release_branch = cpan
 release_message = v%v - Build results of %h (on %b)
