Fix up dist.ini for v0.20 release later today

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Selenium-Remote-Driver
-version = 0.1952
+version = 0.20
 author = Aditya Ivaturi <ivaturi@gmail.com>
 author = Daniel Gempesaw <gempesaw@gmail.com>
 author = Luke Closs <cpan@5thplane.com>
@@ -13,8 +13,8 @@ copyright_year = 2014
 
 [Git::Check]
 [Git::Commit]
-;[Git::Tag]
-;[Git::Push]
+[Git::Tag]
+[Git::Push]
 [Git::CommitBuild]
 release_branch = cpan
 release_message = v%v - Build results of %h (on %b)
