--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,8 @@ license = Apache_2_0
 copyright_holder = Daniel Gempesaw
 copyright_year = 2014
 
-; [TravisYML]
-; build_branch = cpan
+[TravisYML]
+build_branch = cpan
 
 [Git::Check]
 [Git::Commit]
