Fix #149: specify minimum moo version

--- a/dist.ini
+++ b/dist.ini
@@ -66,6 +66,7 @@ copy = cpanfile
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
+Moo = 1.005
 
 [Prereqs / TestRequires]
 ; unfortunately this doesn't coerce 0.04, it just sets the minimum.
