Try out some Travis options to avoid unnecessary tests

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,10 @@ copyright_holder = Daniel Gempesaw
 copyright_year = 2014
 
 [TravisYML]
-build_branch = cpan
+build_branch = /cpan|build/
+dzil_branch =
+test_authordeps = 0
+test_deps = 0
 
 [Git::Check]
 [Git::Commit]
