--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,7 @@
 language: perl
 perl:
-   - 'blead'
-   - '5.20'
-   - '5.18'
    - '5.16'
-   - '5.14'
-   - '5.12'
-   - '5.10'
-   - '5.8'
 matrix:
-   allow_failures:
-      - perl: 'blead'
-      - perl: '5.8'
    fast_finish: true
 before_install:
    - export AUTOMATED_TESTING=1 NONINTERACTIVE_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
@@ -24,6 +14,6 @@ before_install:
 install:
    - cpanm --quiet --notest --skip-satisfied Dist::Zilla
    - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
-   - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | cpanm --verbose"
+   - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
 script:
    - dzil smoke --release --author
