--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 language: perl
 perl:
+   - 'blead'
+   - '5.20'
+   - '5.18'
    - '5.16'
+   - '5.14'
+   - '5.12'
+   - '5.10'
+   - '5.8'
 matrix:
+   allow_failures:
+      - perl: 'blead'
+      - perl: '5.8'
    fast_finish: true
 before_install:
    - export AUTOMATED_TESTING=1 NONINTERACTIVE_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
