Limit perl versions that are run on Travis

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ copyright_year = 2014
 
 [TravisYML]
 build_branch = /cpan|build/
+perl_version = 5.20 5.18 5.16 5.14 5.12 5.10
 dzil_branch =
 test_authordeps = 0
 test_deps = 0
