--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,8 @@ test_authordeps = 0
 test_deps = 0
 
 [Git::Check]
+allow_dirty = dist.ini
+allow_dirty = cpanfile
 [Git::Commit]
 [Git::Tag]
 ;[Git::Push]
