[ContributorsFromGit] -> [Git::Contributors]
https://github.com/RsrchBoy/Dist-Zilla-Plugin-ContributorsFromGit/issues/19
is a longstanding issue.

--- a/dist.ini
+++ b/dist.ini
@@ -40,7 +40,7 @@ exclude_match = \.swp$
 [MetaYAML]
 [PkgVersion]
 
-[ContributorsFromGit]
+[Git::Contributors]
 
 ; skip the Test::SRD modules, their attribution is non-standard
 [FileFinder::ByName / :NotTestSRD]
