Fix #339: Use TestingMania, update github repo author
remove tabs from some html test data

Bring POD into compliance with Test::Pod::Coverage

Make SYNOPSIS compile in POD

Remove useless copy of jquery

Whitespace fixes

fix POD links

strictures/warnings enabled in all PMs

Remove Git:: plugins in dist.ini, More hassle than they are worth

Rearrange dist.ini to not do some things that made tests fail

Add deps for pod checker to .travis.yml, this was dumb on earlier perls

Remove SYNOPSIS from Selenium::CanStartBinary, it doesn't compile
On early perls.  It's also silly to use as an example given the
existing subclasses are more than adequate as examples.

Don't use yaddas in synopses, they don't compile on early perls

--- a/dist.ini
+++ b/dist.ini
@@ -1,40 +1,40 @@
 name = Selenium-Remote-Driver
+version = 1.21
+author = George S. Baugh <george@troglodyne.net>
 author = Aditya Ivaturi <ivaturi@gmail.com>
 author = Daniel Gempesaw <gempesaw@gmail.com>
 author = Emmanuel Peroumalnaïk <peroumalnaik.emmanuel@gmail.com>
 author = Luke Closs <cpan@5thplane.com>
 author = Mark Stosberg <mark@stosberg.com>
 license = Apache_2_0
-copyright_holder = Daniel Gempesaw
+copyright_holder = George S. Baugh
 copyright_year = 2017
 
-[Git::Check]
-allow_dirty = dist.ini
-allow_dirty = cpanfile
-allow_dirty = Changes
-[Git::Commit]
-[Git::NextVersion]
-[Git::Tag]
-;[Git::Push]
-[Git::CommitBuild]
-release_branch = cpan
-release_message = v%v - Build results of %h (on %b)
-
-[AutoPrereqs]
 [GatherDir]
 include_dotfiles = 1
-exclude_filename = cpanfile
-exclude_match = \.swp$
+exclude_match = .*\.swp
+exclude_match = .*\.swo
 
-[MakeMaker]
+[PruneCruft]
+except = \.travis.yml
+
 [ManifestSkip]
-[Manifest]
-[CPANFile]
-[MetaJSON]
 [MetaYAML]
-[PkgVersion]
+[MetaJSON]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
 
-[Git::Contributors]
+[PkgVersion]
+[AutoPrereqs]
+[MetaProvides::Package]
+
+[PodWeaver]
+finder = :NotTestSRD
 
 ; skip the Test::SRD modules, their attribution is non-standard
 [FileFinder::ByName / :NotTestSRD]
@@ -42,28 +42,25 @@ dir = lib
 match = \.pm$
 skip = Test
 
-; `dzil authordeps` doesn't know about the Pod Weaver dependenciess:
-; authordep Pod::Weaver::Section::Contributors = 0
-; authordep Pod::Weaver::Plugin::Encoding = 0
-; authordep Pod::Weaver::Section::SeeAlso = 0
-; authordep Pod::Weaver::Section::GenerateSection = 0
-; authordep Pod::Elemental::Transformer::List = 0
-[PodWeaver]
-finder = :NotTestSRD
+[Git::Contributors]
 
-[PruneCruft]
-except = \.travis.yml
+; XXX can't tidy this mess yet
+;[TidyAll]
 
-[CopyFilesFromBuild]
-copy = cpanfile
+; Unfortunately CPAN changes detects the first date incorrectly.  Oh well...
+; Unfortunately the Manifest test does not work for unknown reasons.
+[@TestingMania]
+critic_config = perlcriticrc
+disable = Test::CPAN::Changes
+disable = Test::DistManifest
 
-[PodCoverageTests]
-[PodSyntaxTests]
-
-[CheckChangesHasContent]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
+
+[CheckMetaResources]
+[CheckPrereqsIndexed]
+[CheckChangesHasContent]
 
 [Prereqs / RuntimeRequires]
 perl = 5.010
@@ -72,10 +69,17 @@ List::Util = 1.33
 
 [GithubMeta]
 issues = 1
-user = gempesaw
+user = teodesian
 
 [Encoding]
 filename = t/www/icon.gif
 filename = t/www/invalid-extension.xpi
 filename = t/www/redisplay.xpi
 encoding = bytes
+
+; `dzil authordeps` doesn't know about the Pod Weaver dependenciess:
+; authordep Pod::Weaver::Section::Contributors = 0
+; authordep Pod::Weaver::Plugin::Encoding = 0
+; authordep Pod::Weaver::Section::SeeAlso = 0
+; authordep Pod::Weaver::Section::GenerateSection = 0
+; authordep Pod::Elemental::Transformer::List = 0
