--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
    - cpanm --quiet --notest Devel::Cover::Report::Coveralls #send to coveralls
    - cpanm --quiet --notest Dist::Zilla::App::Command::cover #make sure we can dzil cover
    - cpanm --quiet --notest --skip-satisfied Dist::Zilla
+   - cpanm --quiet --notest --skip-satisfied Test::Spec WWW::Mechanize Test::WWW::Selenium #Test::Pod::Coverage can be stupid
    - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
    - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
 before_script:
