Fix #345: Implement WC3 webdriver standard compatibility
This adds a new module, Selenium::Remote::Spec that describes
the new specification, along with processing methods to simplify
shims needed in multiple methods.

Current Firefox, Chrome and Edge are verified as working, and
have a variety of tweaks to ensure as many methods as possible
work as well (or better) than they previously did.

More work will need to be done in the future to complete the
JSONWire protocol, so we can both fall back when legacy methods
are available and also be more useful to users in general.

An acceptance testing directory (at) has been added with tests
designed to be run against the various drivers directly by
module contributors and authors.  The idea here is that we can
keep an eye on what works and does not via usage of these tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ perl:
    - '5.18'
    - '5.16'
    - '5.14'
-   - '5.12'
-   - '5.10'
 matrix:
    fast_finish: true
    include:
@@ -24,7 +22,7 @@ install:
    - cpan-install --coverage   # installs converage prereqs, if enabled
    - cpanm --quiet --notest Devel::Cover::Report::Coveralls #send to coveralls
    - cpanm --quiet --notest Dist::Zilla::App::Command::cover #make sure we can dzil cover
-   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
+   - cpanm --quiet --notest --skip-satisfied Dist::Zilla #unfortunately, we need a very new (6.0 or better) dzil, so no perl < 5.14
    - cpanm --quiet --notest --skip-satisfied Test::Spec WWW::Mechanize Test::WWW::Selenium #Test::Pod::Coverage can be stupid
    - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
    - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
