fix deps and document FINDERS

--- a/dist.ini
+++ b/dist.ini
@@ -83,3 +83,6 @@ encoding = bytes
 ; authordep Pod::Weaver::Section::SeeAlso = 0
 ; authordep Pod::Weaver::Section::GenerateSection = 0
 ; authordep Pod::Elemental::Transformer::List = 0
+; authordep XML::Simple = 0
+; authordep Test::LWP::UserAgent = 0
+; authordep Test::Pod::Coverage = 0
