Fix #443 - document nonstandard behavior of driver vendors in generalAction

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Selenium-Remote-Driver
-version = 1.38
+version = 1.39
 author = George S. Baugh <george@troglodyne.net>
 author = Aditya Ivaturi <ivaturi@gmail.com>
 author = Daniel Gempesaw <gempesaw@gmail.com>
@@ -86,3 +86,4 @@ encoding = bytes
 ; authordep XML::Simple = 0
 ; authordep Test::LWP::UserAgent = 0
 ; authordep Test::Pod::Coverage = 0
+; authordep Term::UI = 0
