update maintainer section lol

--- a/weaver.ini
+++ b/weaver.ini
@@ -22,9 +22,6 @@ command = func
 
 [Leftovers]
 
-[SeeAlso]
-[Bugs]
-
 [Region  / postlude]
 
 ; [Authors]
@@ -35,17 +32,21 @@ text = =over 4
 text =
 text = =item *
 text =
-text = Daniel Gempesaw <gempesaw@gmail.com>
-text =
-text = =item *
-text =
-text = Emmanuel Peroumalnaïk <peroumalnaik.emmanuel@gmail.com>
+text = George S. Baugh <george@troglodyne.net>
 text =
 text = =back
 text =
 text = Previous maintainers:
 text =
 text = =over 4
+text =
+text = =item *
+text =
+text = Daniel Gempesaw <gempesaw@gmail.com>
+text =
+text = =item *
+text =
+text = Emmanuel Peroumalnaïk <peroumalnaik.emmanuel@gmail.com>
 text =
 text = =item *
 text =
@@ -67,12 +68,13 @@ text = Aditya Ivaturi <ivaturi@gmail.com>
 text =
 text = =back
 
-
 [Contributors]
 [GenerateSection / COPYRIGHT AND LICENSE]
 text = Copyright (c) 2010-2011 Aditya Ivaturi, Gordon Child
 text =
 text = Copyright (c) 2014-2017 Daniel Gempesaw
+text =
+text = Copyright (c) 2018-2021 George S. Baugh
 text =
 text = Licensed under the Apache License, Version 2.0 (the "License");
 text = you may not use this file except in compliance with the License.
